nova_tests/negative_capability/folder_cycle_setup/modA/two.nv
// Plan 162 Ф.2: folder-module cycle test — modA peer 2.

module negative_capability.folder_cycle_setup.modA

export const A_EXTRA int = 100
